use the constructor instead
fixes #2